Fixed the vertical shift for the container, now it fits perfectly 👌

--- a/exercise1/assets/css/style.css
+++ b/exercise1/assets/css/style.css
@@ -7,7 +7,7 @@
 	margin: auto;
 }
 #container{
-	top:15%;
+	top:6.9%;
 	background-color:white;
 	display: inline-block;
 	max-width: 960px;
@@ -23,7 +23,7 @@
 	left:0;
 	height: 45px;
 	bottom:auto;
-	background-color: white;
+	background-color: #F8F8F8;
 	padding-bottom: 20px;
 	width: 100%;
 	text-align: justify;
